--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@google-cloud/bigquery": "^7.3.0",
 		"d3": "^7.8.5",
 		"dotenv": "^16.3.1",
 		"gsap": "^3.12.2",
