--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ our-access-404113-ba8e70863a01.json
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Local Netlify folder
+.netlify
