--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"d3": "^7.8.5",
 		"dotenv": "^16.3.1",
 		"gsap": "^3.12.2",
+		"netlify-cli": "^17.2.2",
 		"p5": "^1.8.0",
 		"p5-svelte": "^3.1.2"
 	}
