--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
 		"@google-cloud/bigquery": "^7.3.0",
 		"cors": "^2.8.5",
 		"d3": "^7.8.5",
+		"d3-array": "^3.2.4",
+		"d3-composite-projections": "^1.4.0",
+		"d3-force": "^3.0.0",
+		"d3-geo": "^3.1.0",
+		"d3-scale": "^4.0.2",
 		"dotenv": "^16.3.1",
 		"gsap": "^3.12.2",
 		"netlify-cli": "^17.2.2",
 		"p5": "^1.8.0",
-		"p5-svelte": "^3.1.2"
+		"p5-svelte": "^3.1.2",
+		"topojson-client": "^3.1.0"
 	}
 }
