--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"cors": "^2.8.5",
 		"d3": "^7.8.5",
 		"d3-array": "^3.2.4",
+		"d3-color-legend": "^1.4.1",
 		"d3-composite-projections": "^1.4.0",
 		"d3-force": "^3.0.0",
 		"d3-geo": "^3.1.0",
